@@ -1,0 +1,1 @@
+#empty== You don't have any leads yet. Feel free to #{link_to_remote("create a new lead", :url => new_lead_path, :loading => "$('empty').hide()")}.
