@@ -1,6 +1,6 @@
 require File.expand_path(File.dirname(__FILE__) + '/../../spec_helper')
 
-describe "/leads/new.html.haml" do
+describe "/leads/new.js.rjs" do
   include LeadsHelper
   
   before(:each) do
